--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,36 @@
-*.pyc
-.project
-.pydevproject
-.settings
-*.coverage
-*~
-docs/_build
-dist
-*egg-info*
-htmlcov
-bin/
-include/
-lib/
-distribute*
-share/
-*.sqlite
+*.py[co]
 
+# Packages
+*.egg
+*.egg-info
+dist
+build
+eggs
+parts
+bin
+var
+sdist
+develop-eggs
+.installed.cfg
+
+# Installer logs
+pip-log.txt
+
+# Unit test / coverage reports
+.coverage
+.tox
+
+#Translations
+*.mo
+
+#Mr Developer
+.mr.developer.cfg
+
+config/mode.cfg
+environ/
+logs/*
+
+files/products/cache
+static
+!project/*/static
+db
